[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Images/Hit Button.svg" type="Texture" id=1]
[ext_resource path="res://Assets/Images/DealerButton.svg" type="Texture" id=2]
[ext_resource path="res://Player/PlayerCard.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/Stand Button.svg" type="Texture" id=5]
[ext_resource path="res://Player/PlayerMarginContainer.gd" type="Script" id=7]

[node name="PlayerCard" type="Node"]
script = ExtResource( 4 )

[node name="ColorRectBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.709804, 0.709804, 0.709804, 1 )

[node name="PlayerMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="Player21Container" type="VBoxContainer" parent="PlayerMarginContainer"]
margin_right = 980.0
margin_bottom = 1820.0
size_flags_horizontal = 3

[node name="DealerMarginContainer" type="MarginContainer" parent="PlayerMarginContainer/Player21Container"]
margin_right = 980.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="DealerButton" type="TextureButton" parent="PlayerMarginContainer/Player21Container/DealerMarginContainer"]
margin_right = 980.0
margin_bottom = 201.0
texture_normal = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="PlayerMarginContainer/Player21Container"]
margin_left = 921.0
margin_top = 1274.0
margin_right = 980.0
margin_bottom = 1288.0
size_flags_horizontal = 10
size_flags_vertical = 10
size_flags_stretch_ratio = 2.0
text = "Score: 20"
align = 1
valign = 3
max_lines_visible = 0

[node name="PlayerButtonsContainter" type="VBoxContainer" parent="PlayerMarginContainer/Player21Container"]
margin_left = 119.0
margin_top = 1292.0
margin_right = 861.0
margin_bottom = 1820.0
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Hit" type="TextureButton" parent="PlayerMarginContainer/Player21Container/PlayerButtonsContainter"]
margin_right = 742.0
margin_bottom = 262.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 1 )

[node name="Stand" type="TextureButton" parent="PlayerMarginContainer/Player21Container/PlayerButtonsContainter"]
margin_top = 266.0
margin_right = 742.0
margin_bottom = 528.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 5 )

[connection signal="pressed" from="PlayerMarginContainer/Player21Container/DealerMarginContainer/DealerButton" to="." method="_on_DealerButton_pressed"]
[connection signal="pressed" from="PlayerMarginContainer/Player21Container/PlayerButtonsContainter/Hit" to="." method="_on_Hit_pressed"]
[connection signal="pressed" from="PlayerMarginContainer/Player21Container/PlayerButtonsContainter/Stand" to="." method="_on_Stand_pressed"]
